crates/swc_ecma_parser/tests/test262-error-references/fail/0ffb1c3ecf85660e.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/0ffb1c3ecf85660e.js:2:6
  |
2 | World"
  |      ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/0ffb1c3ecf85660e.js:2:1
  |
2 | World"
  | ^^^^^

error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/0ffb1c3ecf85660e.js:1:1
  |
1 | "Hello
  | ^^^^^^

error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/0ffb1c3ecf85660e.js:2:6
  |
2 | World"
  |      ^

